# AI-chatbot-Timeweb

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  sitecustomize.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/core/: config.py
app/services/: __init__.py  opensearch_client.py  timeweb_agent.py
fastapi/: __init__.py  testclient.py
fastapi/middleware/: __init__.py  cors.py
httpx/: __init__.py
opensearchpy/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
tests/: conftest.py  test_chat_endpoint.py  test_config.py  test_timeweb_agent.py
widget/: chatbot.js  index.html  styles.css
