[metadata]
name = timeweb-chatbot
version = 0.1.0
description = Пример сервиса AI ChatBot для TimeWeb
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    fastapi~=0.110
    uvicorn[standard]~=0.29
    httpx~=0.27
    opensearch-py~=2.4
    pydantic-settings~=2.2
    python-dotenv~=1.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest~=8.2

[options.package_data]
* = *.json
